--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "figureitout",
   "scripts": {
-    "build":"tailwindcss build styles.css -o public/styles.css"
+    "build": "tailwindcss build styles.css -o public/styles.css"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.5.0",
     "tailwindcss": "^1.7.5"
   },
   "devDependencies": {},
